--- a/src/cadastroCurso.html
+++ b/src/cadastroCurso.html
@@ -34,16 +34,16 @@
           <li class="nav-item">
             <a class="nav-link" href="livros.html">Livros</a>
           </li>
+          
           <li class="nav-item">
             <a class="nav-link" href="cadastroGrade.html">Grade</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="cadastroCurso.html">Curso</a>
           </li>
-           <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="cadastroUsuario.html">Usuários</a>
           </li>
-        </ul>
         </ul>
       </div>
     </div>
@@ -53,34 +53,41 @@
 
 
 
- 
-
-
 </nav>
 
 
 
 <main class="container">
   
-  <h1>Registar Usuário</h1>
+  <h1>cadastro Curso</h1>
 
   <form action="index.html">
 
-    <div class="">
+    <div class="row">
 
     <div class="mb-1 col-sm-12 col-md-6">
-      <label for="nome" class="form-label">Usuário</label>
-      <input type="text" class="form-control" id="Usuário" placeholder="Insira seu Usuário">
+      <label for="nome" class="form-label">Nome do Curso</label>
+      <input type="text" class="form-control" id="Usuário" placeholder="digita o nome do Curso">
     </div>
 
     <div class="mb-1 col-sm-12 col-md-6">
-      <label for="nome" class="form-label">E-mail</label>
-      <input type="text" class="form-control" id="Usuário" placeholder="Insira seu E-mail">
+      <label for="nome" class="form-label">Descrição</label>
+      <textarea class="form-control" id="Bibliografiabasica" placeholder="Descrição do Curso"></textarea>
+      </div>
+
+    <div class="mb-1 col-sm-12 col-md-6">
+      <label for="professor" class="form-label">Data de início</label>
+      <input type="text" class="form-control" id="senha" placeholder=" Data de criação do Curso">
     </div>
 
     <div class="mb-1 col-sm-12 col-md-6">
-      <label for="professor" class="form-label">Senha</label>
-      <input type="text" class="form-control" id="senha" placeholder=" Digite sua senha">
+      <label for="professor" class="form-label">Habilitação</label>
+      <input type="text" class="form-control" id="senha" placeholder="Tipo de curso">
+    </div>
+
+    <div class="mb-1 col-sm-12 col-md-6">
+      <label for="professor" class="form-label">Unidade</label>
+      <input type="text" class="form-control" id="senha" placeholder="Digite a Unidade">
     </div>
 
     <div class="mb-1 col-sm-12">
