--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,17 @@
           <li class="nav-item">
             <a class="nav-link" href="livros.html">Livros</a>
           </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="cadastroGrade.html">Grade</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="cadastroCurso.html">Curso</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="cadastroUsuario.html">Usuários</a>
           </li>
+        </ul>
         </ul>
       </div>
     </div>
