--- a/src/cadastroUsuario.html
+++ b/src/cadastroUsuario.html
@@ -51,36 +51,54 @@
 
 <nav>
 
-
-
- 
-
-
 </nav>
-
-
 
 <main class="container">
   
-  <h1>Registar Usuário</h1>
+  <h1>Registrar Usuário</h1>
 
   <form action="index.html">
 
-    <div class="">
+    <div class="row">
+
+      <div class="mb-1 col-sm-12 col-md-6">
+      <label for="nome" class="form-label">Nome</label>
+      <input type="text" class="form-control" id="nome" placeholder="Insira seu Nome">
+    </div>
+
+   <div class="mb-1 col-sm-12 col-md-6">
+   <label for="funcao" class="form-label">Função</label>
+   <input list="funcao" class="form-control" name ="funcao" id="funcao">
+    <datalist id="funcao">
+      <option value="Professor">
+      <option value="Coordenador">
+      <option value="Gerencia de ensino">
+      <option value="Diretor">
+      <option value="Tecnico Administrativo">
+      <option value="Estagiario">
+    </datalist>
+    </div>
+    
+
 
     <div class="mb-1 col-sm-12 col-md-6">
-      <label for="nome" class="form-label">Usuário</label>
-      <input type="text" class="form-control" id="Usuário" placeholder="Insira seu Usuário">
+      <label for="usuario" class="form-label">Usuário</label>
+      <input type="text" class="form-control" id="Usuario" placeholder="Insira seu Usuário">
     </div>
 
     <div class="mb-1 col-sm-12 col-md-6">
-      <label for="nome" class="form-label">E-mail</label>
-      <input type="text" class="form-control" id="Usuário" placeholder="Insira seu E-mail">
+      <label for="email" class="form-label">E-mail</label>
+      <input type="text" class="form-control" id="email" placeholder="Insira seu E-mail">
     </div>
 
     <div class="mb-1 col-sm-12 col-md-6">
-      <label for="professor" class="form-label">Senha</label>
+      <label for="senha" class="form-label">Senha</label>
       <input type="text" class="form-control" id="senha" placeholder=" Digite sua senha">
+    </div>
+
+    <div class="mb-1 col-sm-12 col-md-6">
+      <label for="confirmacao a senha" class="form-label">Confirmação de senha</label>
+      <input type="text" class="form-control" id="confirmacao a senha" placeholder=" Digite sua senha">
     </div>
 
     <div class="mb-1 col-sm-12">
